--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
 
 
 *{
@@ -12,8 +12,7 @@
 body {
     background-color: #F3F5FC;
     box-sizing: border-box;
-   
-
+    
    
 }
 
@@ -21,6 +20,8 @@ body {
 .encriptador{
     display: flex;
     justify-content: flex-start;
+    margin-top: 2.77%;
+    margin-left: 2.77%;
     
 }
 
@@ -29,30 +30,10 @@ body {
 .encriptador__ingreso__texto{
     display: flex;
     flex-direction: column;
+    margin-top: 6.5%;
+    padding-left: 12.14%;
 
 }
-
-.encriptador__ingreso__texto img{
-    padding: 4.35%;
-
-}
-
-.encriptador__ingreso__texto form{
-   margin-left: 240px;
-
-}
-
-.encriptador__ingreso__texto__botones{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    width: 680px;
-    
-    
-    
-  
-}
-
 
 .encriptador__ingreso__texto__box__text{
     background-color: #F3F5FC;
@@ -61,23 +42,39 @@ body {
     font-family: "Inter", sans-serif;
     color: #0A3871;
     font-weight: 400;
-    width: 680px;
-    height: 720px;
+    width: 688px;
+    height: 680px;
 }
-
 
 .encriptador__ingreso__texto__box__text_advertencia{
     display: flex;
-    margin-left: 5px;
-    margin-bottom: 16px;
+    margin-left: 0.7%;
+    margin-bottom: 2%;
     align-items: center;
     font-family: "Inter", sans-serif;
     font-weight: 400;
     font-size: 0.75rem;
     color: #495957;
-    gap: 10px;
+    gap: 2%;
     
 }
+
+
+.encriptador__ingreso__texto__botones{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    
+    
+    
+  
+}
+
+
+
+
+
 
 .encriptador__ingreso__texto__Boton_encriptar{
     color: #EFF1FA;
@@ -112,16 +109,24 @@ body {
    justify-content: center;
    align-items: center;
    background-color: #ffffff;
-   width: 400px;
-   height: 944px;
+   width: 28.5%;
+   height: 900px;
    border-radius: 32px;
-   margin: 40px;
-   box-shadow: 0px 10px 20px #c7c7c7
+   box-shadow: 0px 10px 20px #c7c7c7;
+   margin-left: 3%;
+   box-sizing: border-box;
+
 }
+
+.box__resultado img{
+    display: block;
+}
+
 .box__resultado__textos{
     width: 336px;
     display: flex;
     flex-direction: column;
+    display: block;
     
 }
 
@@ -131,6 +136,7 @@ body {
     font-size: 1.5rem;
     color: #343A40;
     text-align: center;
+    display: block;
    
 
 }
@@ -141,21 +147,30 @@ body {
     font-size: 1rem;
     color: #495957;
     text-align: center;
+    display: block;
 
 
 }
 
-.box__text__resultado{
-    display:none;
-    width: 336px;
-    height: 781px;
-    padding: 32px;
+.box__text_encriptado{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.box__text__encriptado_resuelto{
+    display: none;
+    width: 85%;
+    height: 670px;
+    padding: 5%;
+    margin-top: 10%;
     background-color: #ffffff
 
 }
 
 
-.box__text__resultado__Boton_copiar{
+.box__text__resuleto__Boton_copiar{
+    display: none;
     color: #0A3871;
     background-color: #ffffff ;
     width: 328px;
@@ -164,15 +179,59 @@ body {
     font-weight: 400;
     font-size: 1rem;
     padding: 24px;
-    margin: 32px;
+    
+    
 }
 
 @media screen and (max-width: 770px) {
-    .box__resultado img{
-        display:none;
-    }
-   
     .encriptador{
         flex-direction: column;
     }
+     
+    .encriptador__ingreso__texto{
+        padding-left: 0%;
+
+    }
+
+    .encriptador__ingreso__texto__botones{
+        width: 680px;
+
+    }
+   
+    .box__resultado {
+        width: 680px;
+        margin-left: 0%;
+        margin-top: 5%;
+        height: 100%;
+
+    }
+
+    .box__resultado img{
+        display:none;
+
+    }
+
+    .box__resultado__textos{
+        width: 100%;
+        padding: 5%;
+    }
+
+
+   
+}
+
+@media screen and (max-width: 375px){
+
+    .encriptador__ingreso__texto__box__text{
+        height: 250px;
+    }
+    .encriptador__ingreso__texto__botones{
+        flex-direction: column;
+        width: 330px;
+    }
+
+    .box__resultado{
+        width: 327px;
+    }
+
 }
