--- a/style.css
+++ b/style.css
@@ -2,6 +2,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
 
 
+:root{
+    --color-lightBlue: #f3f5fc;
+    --color-darkBlue: #0A3871;
+    --color-gray:#d8dfe8;
+    --color-white:#ffffff;
+    --color-darkGray: #495057;
+    --color-black:#000000;
+    --fuente-Inter:"Inter", sans-serif;
+
+
+}
 
 *{
     padding: 0;
@@ -10,7 +21,7 @@
 
 
 body {
-    background-color: #F3F5FC;
+    background-color:var(--color-lightBlue);
     box-sizing: border-box;
     
    
@@ -31,19 +42,20 @@ body {
     display: flex;
     flex-direction: column;
     margin-top: 6.5%;
+    margin-bottom: 3%;
     padding-left: 12.14%;
 
 }
 
 .encriptador__ingreso__texto__box__text{
-    background-color: #F3F5FC;
+    background-color: var(--color-lightBlue);
     border: none;
     font-size: 2rem;
-    font-family: "Inter", sans-serif;
-    color: #0A3871;
+    font-family: var(--fuente-Inter);
+    color: var(--color-darkBlue);
     font-weight: 400;
-    width: 688px;
-    height: 680px;
+    width: 100%;
+    height: 350%;
 }
 
 .encriptador__ingreso__texto__box__text_advertencia{
@@ -51,10 +63,10 @@ body {
     margin-left: 0.7%;
     margin-bottom: 2%;
     align-items: center;
-    font-family: "Inter", sans-serif;
+    font-family: var(--fuente-Inter);
     font-weight: 400;
     font-size: 0.75rem;
-    color: #495957;
+    color: var(--color-darkGray);
     gap: 2%;
     
 }
@@ -66,22 +78,14 @@ body {
     justify-content: space-around;
     width: 100%;
     
-    
-    
-  
 }
 
-
-
-
-
-
 .encriptador__ingreso__texto__Boton_encriptar{
-    color: #EFF1FA;
-    background-color:#0A3871 ;
+    color: var(--color-white);
+    background-color: var(--color-darkBlue);
     width: 328px;
     border-radius: 24px;
-    font-family: "Inter", sans-serif;
+    font-family: var(--fuente-Inter);
     font-weight: 400;
     font-size: 1rem;
     padding: 24px;
@@ -115,18 +119,21 @@ body {
    box-shadow: 0px 10px 20px #c7c7c7;
    margin-left: 3%;
    box-sizing: border-box;
+   margin-bottom: 3%;
 
 }
 
 .box__resultado img{
     display: block;
+    width: 100%;
 }
 
 .box__resultado__textos{
-    width: 336px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     display: block;
+   
     
 }
 
@@ -183,6 +190,17 @@ body {
     
 }
 
+.pie__pagina{
+    color: var(--color-white);
+    background-color: var(--color-darkBlue);
+    font-family: var(--fuente-Inter);
+    font-weight: 400;
+    font-size: 1rem;
+    padding: 24px;
+    text-align: center;
+
+}
+
 @media screen and (max-width: 770px) {
     .encriptador{
         flex-direction: column;
@@ -233,5 +251,4 @@ body {
     .box__resultado{
         width: 327px;
     }
-
 }
