--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     --color-white:#ffffff;
     --color-darkGray: #495057;
     --color-black:#000000;
+    --color-shadow:#c7c7c7;
     --fuente-Inter:"Inter", sans-serif;
 
 
@@ -27,6 +28,9 @@ body {
    
 }
 
+.logo__alura{
+    padding: 3%;
+}
 
 .encriptador{
     display: flex;
@@ -89,21 +93,21 @@ body {
     font-weight: 400;
     font-size: 1rem;
     padding: 24px;
-    box-shadow: 0px 10px 20px #c7c7c7
+    box-shadow: 0px 10px 20px var(--color-shadow);
 
 }
 
 .encriptador__ingreso__texto__Boton_desencriptar{
-    color: #0A3871;
-    background-color: #D8DFE8 ;
+    color: var(--color-darkBlue);
+    background-color: var(--color-gray) ;
     width: 328px;
-    border-color: #0A3871;
+    border-color: var(--color-darkBlue);
     border-radius: 24px;
-    font-family: "Inter", sans-serif;
+    font-family: var(--fuente-Inter);
     font-weight: 400;
     font-size: 1rem;
     padding: 24px;
-    box-shadow: 0px 10px 20px #c7c7c7
+    box-shadow: 0px 10px 20px var(--color-shadow);
 }
 
 
@@ -112,11 +116,11 @@ body {
    flex-direction: column;
    justify-content: center;
    align-items: center;
-   background-color: #ffffff;
+   background-color: var(--color-white);
    width: 28.5%;
    height: 900px;
    border-radius: 32px;
-   box-shadow: 0px 10px 20px #c7c7c7;
+   box-shadow: 0px 10px 20px var(--color-shadow);
    margin-left: 3%;
    box-sizing: border-box;
    margin-bottom: 3%;
@@ -138,7 +142,7 @@ body {
 }
 
 .box__resultado__texto1_destacado{
-    font-family: "Inter", sans-serif;
+    font-family: var(--fuente-Inter);
     font-weight: 700;
     font-size: 1.5rem;
     color: #343A40;
@@ -149,7 +153,7 @@ body {
 }
 
 .box__resultado__texto2{
-    font-family: "Inter", sans-serif;
+    font-family: var(--fuente-Inter);
     font-weight: 400;
     font-size: 1rem;
     color: #495957;
@@ -171,18 +175,18 @@ body {
     height: 670px;
     padding: 5%;
     margin-top: 10%;
-    background-color: #ffffff
+    background-color: var(--color-white);
 
 }
 
 
 .box__text__resuleto__Boton_copiar{
     display: none;
-    color: #0A3871;
-    background-color: #ffffff ;
+    color: var(--color-darkBlue);
+    background-color: var(--color-white) ;
     width: 328px;
     border-radius: 24px;
-    font-family: "Inter", sans-serif;
+    font-family: var(--fuente-Inter);
     font-weight: 400;
     font-size: 1rem;
     padding: 24px;
