--- a/style.css
+++ b/style.css
@@ -166,18 +166,24 @@ body {
 .box__text_encriptado{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+  
 }
 
-.box__text__encriptado_resuelto{
+.box__text__encriptado_resuelto {
     display: none;
-    width: 85%;
-    height: 670px;
-    padding: 5%;
-    margin-top: 10%;
     background-color: var(--color-white);
-
+    border: none;
+    font-size: 2rem;
+    font-family: var(--fuente-Inter);
+    color: var(--color-darkBlue);
+    font-weight: 400;
+    width: 150%; 
+    height: 800px; 
+   
+   
 }
+
 
 
 .box__text__resuleto__Boton_copiar{
