--- a/style.css
+++ b/style.css
@@ -9,8 +9,9 @@
     --color-white:#ffffff;
     --color-darkGray: #495057;
     --color-black:#000000;
-    --color-shadow:#c7c7c7;
+    --color-shadow: 0rem 0.75rem 1.25rem #c7c7c7;
     --fuente-Inter:"Inter", sans-serif;
+   
 
 
 }
@@ -29,14 +30,12 @@ body {
 }
 
 .logo__alura{
-    padding: 3%;
+    margin: 3%
 }
 
 .encriptador{
     display: flex;
-    justify-content: flex-start;
-    margin-top: 2.77%;
-    margin-left: 2.77%;
+    gap: 5%;
     
 }
 
@@ -45,9 +44,8 @@ body {
 .encriptador__ingreso__texto{
     display: flex;
     flex-direction: column;
-    margin-top: 6.5%;
     margin-bottom: 3%;
-    padding-left: 12.14%;
+    margin-left: 12%;
 
 }
 
@@ -59,12 +57,14 @@ body {
     color: var(--color-darkBlue);
     font-weight: 400;
     width: 100%;
-    height: 350%;
+    height: 100%;
+    outline: none;
+    padding-top: 20%;
 }
 
 .encriptador__ingreso__texto__box__text_advertencia{
     display: flex;
-    margin-left: 0.7%;
+    margin-left: 1%;
     margin-bottom: 2%;
     align-items: center;
     font-family: var(--fuente-Inter);
@@ -79,35 +79,35 @@ body {
 .encriptador__ingreso__texto__botones{
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    width: 100%;
+    width: 37.5rem;
+    gap: 5%;
     
 }
 
 .encriptador__ingreso__texto__Boton_encriptar{
     color: var(--color-white);
     background-color: var(--color-darkBlue);
-    width: 328px;
-    border-radius: 24px;
+    width: 100%;
+    border-radius: 2rem;
     font-family: var(--fuente-Inter);
     font-weight: 400;
     font-size: 1rem;
-    padding: 24px;
-    box-shadow: 0px 10px 20px var(--color-shadow);
+    padding: 3.5%;
+    box-shadow: var(--color-shadow)
 
 }
 
 .encriptador__ingreso__texto__Boton_desencriptar{
     color: var(--color-darkBlue);
     background-color: var(--color-gray) ;
-    width: 328px;
+    width: 100%;
     border-color: var(--color-darkBlue);
-    border-radius: 24px;
+    border-radius: 2rem;
     font-family: var(--fuente-Inter);
     font-weight: 400;
     font-size: 1rem;
-    padding: 24px;
-    box-shadow: 0px 10px 20px var(--color-shadow);
+    padding: 3.5%;
+    box-shadow: var(--color-shadow)
 }
 
 
@@ -116,29 +116,30 @@ body {
    flex-direction: column;
    justify-content: center;
    align-items: center;
+   width: 25rem;
+   height: 59rem;
    background-color: var(--color-white);
-   width: 28.5%;
-   height: 900px;
    border-radius: 32px;
-   box-shadow: 0px 10px 20px var(--color-shadow);
-   margin-left: 3%;
-   box-sizing: border-box;
+   box-shadow: var(--color-shadow);
    margin-bottom: 3%;
+   box-sizing: border-box;
 
 }
 
 .box__resultado img{
-    display: block;
-    width: 100%;
+    display: flex;
+    width: auto;
+    padding: 0% 9% 0% 9%;
+
 }
 
 .box__resultado__textos{
     width: 100%;
     display: flex;
     flex-direction: column;
-    display: block;
    
-    
+   
+   
 }
 
 .box__resultado__texto1_destacado{
@@ -147,8 +148,8 @@ body {
     font-size: 1.5rem;
     color: #343A40;
     text-align: center;
-    display: block;
-   
+    display: flex;
+    padding: 0% 9% 0% 9%;
 
 }
 
@@ -158,44 +159,52 @@ body {
     font-size: 1rem;
     color: #495957;
     text-align: center;
-    display: block;
-
+    display: flex;
+    padding: 0% 9% 0% 9%;
 
 }
 
 .box__text_encriptado{
-    display: flex;
+    display: none;
     flex-direction: column;
-    align-items: flex-start;
-  
+    align-items: center;
+    width: 25rem;
+    height: 59rem;
+    background-color: var(--color-white);
+    border-radius: 32px;
+    box-shadow: var(--color-shadow);
+    margin-bottom: 3%;
+    box-sizing: border-box;
 }
 
-.box__text__encriptado_resuelto {
+.box__text__encriptado_resuelto{
     display: none;
+    border-radius: 32px;
     background-color: var(--color-white);
     border: none;
     font-size: 2rem;
     font-family: var(--fuente-Inter);
     color: var(--color-darkBlue);
     font-weight: 400;
-    width: 150%; 
-    height: 800px; 
-   
-   
+    padding-top: 20%;
+    height: 100%;
+    
 }
 
 
 
-.box__text__resuleto__Boton_copiar{
+.box__text__resuelto__Boton_copiar{
     display: none;
     color: var(--color-darkBlue);
     background-color: var(--color-white) ;
-    width: 328px;
+    width: 21rem;
     border-radius: 24px;
     font-family: var(--fuente-Inter);
     font-weight: 400;
     font-size: 1rem;
-    padding: 24px;
+    padding: 6%;
+    justify-content: center;
+    
     
     
 }
@@ -206,7 +215,7 @@ body {
     font-family: var(--fuente-Inter);
     font-weight: 400;
     font-size: 1rem;
-    padding: 24px;
+    padding: 2rem;
     text-align: center;
 
 }
@@ -222,12 +231,12 @@ body {
     }
 
     .encriptador__ingreso__texto__botones{
-        width: 680px;
+        width: 100%;
 
     }
    
     .box__resultado {
-        width: 680px;
+        width: 100%;
         margin-left: 0%;
         margin-top: 5%;
         height: 100%;
@@ -244,21 +253,33 @@ body {
         padding: 5%;
     }
 
+    .box__text_encriptado{
+        width: 100%;
+    
+    }
 
+    .box__text__resuelto__Boton_copiar{
+        width: 100%;
+    }
    
 }
 
 @media screen and (max-width: 375px){
 
     .encriptador__ingreso__texto__box__text{
-        height: 250px;
+        height: 100%;
     }
     .encriptador__ingreso__texto__botones{
         flex-direction: column;
-        width: 330px;
+        width:100%;
     }
 
     .box__resultado{
-        width: 327px;
+        width: 100%;
     }
+
+    .box__text__resuelto__Boton_copiar{
+        width: 100%;
+    }
+
 }
