--- a/style.css
+++ b/style.css
@@ -173,14 +173,17 @@ body {
 
 .box__text__encriptado_resuelto{
     display: none;
-    border-radius: 32px;
     background-color: var(--color-white);
     border: none;
+    outline: none;
     font-size: 2rem;
     font-family: var(--fuente-Inter);
     color: var(--color-darkBlue);
     font-weight: 400;
-    padding-top: 20%;
+    margin-top: 10%;
+    margin-bottom: 5%;
+    width: 100%;
+    height: 300px;
     
 }
 
